--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="utf-8">
     <title>Css Animation Playground</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Hi!, I'm an H1</h1>
