--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <head>
     <meta charset="utf-8">
     <title>Css Animation Playground</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <h1>Hi!, I'm an H1</h1>
     <p>This is a paragraph</p>
+    <div>
+        <input type="text"/>
+    </div>
     <button>Click Me!</button>
 </body>
