Add basics of page

--- a/psudoclass-exercise/index.html
+++ b/psudoclass-exercise/index.html
@@ -5,4 +5,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+    <button>Turn me purple WHILE a user clicks me</button>
+    <button>Turn me green when a user mouses over me</button>
+    <button>Turn me orange while I have focus(whatever that means)</button>
 </body>
