Add classes to buttons

--- a/psudoclass-exercise/index.html
+++ b/psudoclass-exercise/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
-    <title>Css Animation Playground</title>
+    <title>Css Psuedoclasses Project</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <button>Turn me purple WHILE a user clicks me</button>
-    <button>Turn me green when a user mouses over me</button>
-    <button>Turn me orange while I have focus(whatever that means)</button>
+    <button class="purple">Turn me purple WHILE a user clicks me</button>
+    <button class="green">Turn me green when a user mouses over me</button>
+    <button class="orange">Turn me orange while I have focus(whatever that means)</button>
 </body>
