--- a/animated-button/index.html
+++ b/animated-button/index.html
@@ -5,5 +5,8 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    
+    <div class="holder">
+        <h1>This Button Does Nothing</h1>
+        <button class="btn">Click Me!</button>
+    </div>
 </body>
