Add background and text styles

--- a/animated-button/index.html
+++ b/animated-button/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="holder">
-        <h1>This Button Does Nothing</h1>
+        <h1 class="header">This Button Does Nothing</h1>
         <button class="btn">Click Me!</button>
     </div>
 </body>
