Add translate properties to playground

--- a/playground/index.html
+++ b/playground/index.html
@@ -11,4 +11,11 @@
         <input type="text"/>
     </div>
     <button>Click Me!</button>
+    <hr>
+    <div class="translate">
+        <h1 class="move-right">Click Me to Move Right</h1>
+        <h1 class="move-left">Click Me to Move Left</h1>
+        <h1 class="move-down">Click Me to Move Down</h1>
+        <h1 class="move-up">Click Me to Move Up</h1>
+    </div>
 </body>
