Add a translate combo

--- a/playground/index.html
+++ b/playground/index.html
@@ -17,5 +17,6 @@
         <h1 class="move-left">Click Me to Move Left</h1>
         <h1 class="move-down">Click Me to Move Down</h1>
         <h1 class="move-up">Click Me to Move Up</h1>
+        <h1 class="move-up-right">Hover on Me to Move Up and Right</h1>
     </div>
 </body>
