Add transformed elements

--- a/playground/scale.html
+++ b/playground/scale.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
-    <title>Css Animation Playground</title>
+    <title>Sacle Animation Playground</title>
     <link rel="stylesheet" type="text/css" href="scale.css">
 </head>
 <body>
-
+    <div>
+        <p>Hello</p>
+        <p class="transformed">Hello</p>
+    </div>
 </body>
