Add two new files to work with transitions

--- a/playground/scale.html
+++ b/playground/scale.html
@@ -9,4 +9,8 @@
         <p>Hello</p>
         <p class="transformed">Hello</p>
     </div>
+    
+    <div>
+        <h2 class="rotate">Rotate</h2>
+    </div>
 </body>
