Add new transitions to transforms

--- a/playground/transition.html
+++ b/playground/transition.html
@@ -7,5 +7,5 @@
 <body>
 
     <p class="box">BORING</p>
-    <p class="animated-box">Animated</p>
+    <p class="animated box">Animated</p>
 </body>
