--- a/keyframe-animations/index.html
+++ b/keyframe-animations/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Keyframe Animations</h1>
         <div class="container">
-          <h3>Hello!</he>
+          <h3>Hello!</h3>
         </div>
 
     </body>
